[tool.poetry]
name = "fastapi-memes"
version = "0.1.0"
description = ""
authors = ["arka-windows11 <arkad.sh@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
fastapi-pagination = "^0.12.25"
aiobotocore = "^2.13.0"
faker = "^26.0.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
